client/src/styles/Profile.css
.profile {
  display: grid;
  grid-template: 1fr auto / 1fr 9fr;

  grid-template-areas:
    'header header'
    'sidebar main';
}

.profileTitle {
  grid-area: header;
  margin: 50px 0 0;
  text-align: left;
}

.profileNav {
  grid-area: sidebar;

  margin: 50px auto;
  background-color: #aaaaaa;
  border-radius: 10px;
  height: 500px;
  width: 100px;
  position: fixed;
  top: 300px;
}
.profileNav ul {
  height: 500px;
  list-style-type: none;
  display: flex;
  flex-direction: column;

  justify-content: space-around;
}

.profileNav ul a {
  text-decoration: none;
  color: black;
  width: fit-content;
  border-radius: 50px;
  margin: 0 auto;
  padding: 5px 10px;
}

.profileNav ul a:hover {
  background-color: white;
  text-transform: uppercase;
  font-size: 0.8em;
}

.profileContent {
  margin: 50px 0;
  grid-area: main;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-around;
}

.profileContent div {
  margin: 0 0 10px 0;
  width: 300px;
  border-radius: 10px;
}

.product {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  /* margin: 0 5px; */
}

.controlBtn {
  position: relative;
  bottom: 0;

  display: flex;
  justify-content: space-between;
  padding: 15px 0 0;
}

.controlBtn button {
  padding: 5px 10px;
  border: none;
  border-radius: 10px;
  cursor: pointer;
  height: 30px;
}

.profileNav a {
  cursor: pointer;
}

